# hacettepe-chatbot

./: .env  LICENSE  api.py  cli.py  crawler.py  datasets.dvc  pipeline.py  pyproject.toml  retrieval_dataset.dvc  utils.py
