[tool.poetry]
name = "hacettepe-crawler"
version = "0.1.0"
description = "A simple crawler for Hacettepe domains"
authors = ["Alper Balbay <itsc0508@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [{include = "hacettepe_crawler"}]

[tool.poetry.dependencies]
python = "3.11"
requests = "^2.31.0"
httpx = "^0.24.1"
bs4 = "^0.0.1"
loguru = "^0.7.0"
typer = "^0.9.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.4.0"
ruff = "^0.0.285"
black = "^23.7.0"
pydantic = "^2.2.1"
ipykernel = "^6.25.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
